# mindful

./: .gitignore  AGENTS.md  README.md  kitchenloop.yaml  pyproject.toml
.kitchenloop/: coverage-matrix.yaml  metrics.json  unbeatable-tests.md
docs/: spec.md
docs/internal/: loop-state.md
docs/internal/reports/: iteration-1-report.md  iteration-2-report.md  loop-review-iter-0-2.md
memory/: codebase-patterns.md
scripts/kitchenloop/: kitchenloop.sh  refresh-mcp-oauth.sh
scripts/kitchenloop/lib/: config.sh  paths.sh  tickets.sh
scripts/kitchenloop/prompts/: backlog.md  execute.md  ideate-backtest.md  ideate-exploration.md  ideate-ui.md  ideate.md  polish.md  regress.md  triage-bug-reproduce.md  triage.md
scripts/pr-manager/: pr-manager.sh  state.json
scripts/pr-manager/prompts/: merge-pr.md  prep-pr.md  resolve-conflicts.md
src/mindful/: __main__.py  cli.py
tests/: conftest.py
tests/scenarios/: test_config_get_set.py  test_exit_code_contract.py  test_first_day_round_trip.py  test_history_readonly_contract.py  test_note_round_trip.py  test_start_emits_progress_signals.py
tests/smoke/: test_smoke.py
